--- a/resources/maizzle/layouts/main.html
+++ b/resources/maizzle/layouts/main.html
@@ -58,7 +58,7 @@ $appUrl = env('APP_FRONTEND_URL');
               <tr>
                 <td class="py-6 px-9 sm:p-6 bg-white [border:1px_solid_theme(colors.slate.200)] rounded-lg">
                   <a href="@{{ $appUrl }}">
-                    <img src="@{{asset('logo.png')}}" width="70" alt="Septyni Sesi">
+                    <img src="@{{asset('logo.png')}}" width="110" alt="WIDEN arena">
                   </a>
 
                   <x-spacer height="24px" />
@@ -70,7 +70,7 @@ $appUrl = env('APP_FRONTEND_URL');
                   <p class="m-0 text-base/6 text-slate-600">
                     Ačiū, kad naudojatės mūsų paslaugomis,<br>
 
-                    <span class="font-semibold">SEPTYNI ŠEŠI</span>
+                    <span class="font-semibold">WIDEN arena</span>
                   </p>
                 </td>
               </tr>
