--- a/resources/maizzle/layouts/main.html
+++ b/resources/maizzle/layouts/main.html
@@ -67,7 +67,7 @@ $appUrl = env('APP_FRONTEND_URL');
 
                   <x-spacer height="24px" />
 
-                  <p class="m-0 text-base/6 text-slate-600">
+                  <p class="m-0 text-base/6 text-blumine-700">
                     Ačiū, kad naudojatės mūsų paslaugomis,<br>
 
                     <span class="font-semibold">WIDEN arena</span>
